--- a/template/article.html
+++ b/template/article.html
@@ -64,7 +64,7 @@
                     {{- end -}}
                 </div>
                 {{- if .Event.EventText -}}
-                <a href="{{.Event.EventLink}}" target="_blank">
+                <a href="{{.Event.EventLink}}" target="_blank" class="event-banner-link-wrapper">
                     <div class="event-banner"><p>{{- .Event.EventText -}}</p></div>
                 </a>
                 {{- end -}}
