--- a/template/assets/css/article.css
+++ b/template/assets/css/article.css
@@ -245,10 +245,7 @@ th {
 
 .widget-child-wrapper {
     margin: 3px;
-}
-
-/* ツイートボタン */
-
-.tweetbutton {
-    cursor: pointer;
+    margin-right: 10px;
+    display: flex;
+    align-items: center;
 }
