--- a/template/article.html
+++ b/template/article.html
@@ -86,7 +86,7 @@
                         <script type="text/javascript" src="https://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
                     </div>
                 </div>
-                <script src="https://giscus.app/client.js" data-repo="Qman11010101/qmans_diary" data-repo-id="R_kgDOIePf6A" data-category="Announcements" data-category-id="DIC_kwDOIePf6M4Ch1sQ" data-mapping="pathname" data-strict="1" data-reactions-enabled="0" data-emit-metadata="0" data-input-position="top" data-theme="preferred_color_scheme" data-lang="ja" crossorigin="anonymous" async>
+                <script src="https://giscus.app/client.js" data-repo="Qman11010101/qmans_diary" data-repo-id="R_kgDOIePf6A" data-category="Announcements" data-category-id="DIC_kwDOIePf6M4Ch1sQ" data-mapping="pathname" data-strict="1" data-reactions-enabled="0" data-emit-metadata="0" data-input-position="top" data-theme="light_tritanopia" data-lang="ja" crossorigin="anonymous" async>
                 </script>
             </section>
             <section class="box">
