--- a/template/article.html
+++ b/template/article.html
@@ -85,6 +85,9 @@
                         <a href="https://b.hatena.ne.jp/entry/" class="hatena-bookmark-button" data-hatena-bookmark-layout="touch-counter" title="このエントリーをはてなブックマークに追加"><img src="https://b.st-hatena.com/images/v4/public/entry-button/button-only@2x.png" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a>
                         <script type="text/javascript" src="https://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
                     </div>
+                    <div class="widget-child-wrapper">
+                        <button id="misc-share"><img src="/assets/share.svg" width="16" height="16">共有</button>
+                    </div>
                 </div>
                 <!-- <hr>
                 <script src="https://giscus.app/client.js" data-repo="Qman11010101/qmans_diary" data-repo-id="R_kgDOIePf6A" data-category="Announcements" data-category-id="DIC_kwDOIePf6M4Ch1sQ" data-mapping="pathname" data-strict="1" data-reactions-enabled="0" data-emit-metadata="0" data-input-position="top" data-theme="light_tritanopia" data-lang="ja" crossorigin="anonymous" async>
