--- a/template/article.html
+++ b/template/article.html
@@ -86,12 +86,17 @@
                         <script type="text/javascript" src="https://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
                     </div>
                     <div class="widget-child-wrapper">
-                        <button id="misc-share"><img src="/assets/share.svg" width="16" height="16">共有</button>
+                        <button id="misc-share"><img src="/assets/share.svg" width="16" height="16"><span>共有</span></button>
                     </div>
                 </div>
                 <!-- <hr>
-                <script src="https://giscus.app/client.js" data-repo="Qman11010101/qmans_diary" data-repo-id="R_kgDOIePf6A" data-category="Announcements" data-category-id="DIC_kwDOIePf6M4Ch1sQ" data-mapping="pathname" data-strict="1" data-reactions-enabled="0" data-emit-metadata="0" data-input-position="top" data-theme="light_tritanopia" data-lang="ja" crossorigin="anonymous" async>
-                </script> -->
+                <div class="comment-wrapper">
+                    <span class="comment-count-wrapper"><span id="comment-count">225</span>件のコメント</span>
+                    <div class="comment-input">
+                        <input id="commenter-name" type="text" placeholder="名前を入力...">
+                        <textarea id="comment-content" placeholder="コメントを入力..."></textarea>
+                    </div>
+                </div> -->
             </section>
             <section class="box">
                 <section class="widgetgroup" id="recent">
