--- a/output/assets/css/article.css
+++ b/output/assets/css/article.css
@@ -249,3 +249,62 @@ th {
     display: flex;
     align-items: center;
 }
+
+#misc-share {
+    background-color: #cdc;
+    border: 2px solid #6a6;
+    border-radius: 10px;
+    padding: 3px 10px;
+    cursor: pointer;
+
+    &:hover {
+        background-color: #bcb;
+    }
+
+    img {
+        display: inline-block;
+        margin-right: 5px;
+    }
+
+    >span {
+        vertical-align: 2px;
+    }
+}
+
+/* コメント欄 */
+
+.comment-wrapper {
+    .comment-count-wrapper {
+        font-weight: bold;
+        font-size: 1.1rem;
+    }
+
+    >.comment-input {
+        >* {
+            margin-top: 10px;
+        }
+
+        #commenter-name,
+        #comment-content {
+            width: 100%;
+            background-color: #fff;
+            border: 2px solid #ddd;
+            border-radius: 10px;
+            padding: 5px 10px;
+
+            &::placeholder {
+                color: #888;
+            }
+
+            &:focus {
+                border-color: #418d45;
+            }
+        }
+
+        #comment-content {
+            field-sizing: content;
+            min-height: 100px;
+            max-height: 400px;
+        }
+    }
+}
