--- a/template/article.html
+++ b/template/article.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="/assets/css/article.css?b={{buildTime}}">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/vs2015.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/powershell.min.js" integrity="sha512-jWH48mwjihORkGHkvD8l0E/MtDgvY0C69eaYitXkI28ZneLUso2I3PgrN8lNnF3esiwHIFy0QODZy7ypmo9Flg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="/assets/js/latest_articles.js?b={{buildTime}}"></script>
     <script src="/assets/js/categories.js?b={{buildTime}}"></script>
     <script src="/assets/js/codeblock.js?b={{buildTime}}"></script>
