--- a/template/article.html
+++ b/template/article.html
@@ -35,10 +35,10 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/cmake.min.js" integrity="sha512-dB3yY382soXMlcOc71s6oU9RyP+KRgMLrDBh2EOpBBbWcpNeOoHHEldKuIhrVBCjdSlD6ugRkKkDA039sWipbw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/powershell.min.js" integrity="sha512-jWH48mwjihORkGHkvD8l0E/MtDgvY0C69eaYitXkI28ZneLUso2I3PgrN8lNnF3esiwHIFy0QODZy7ypmo9Flg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="../assets/js/latest_articles.js?b={{buildTime}}"></script>
-    <script src="../assets/js/categories.js?b={{buildTime}}"></script>
-    <script src="../assets/js/codeblock.js?b={{buildTime}}"></script>
-    <script src="../assets/js/time_course.js?b={{buildTime}}"></script>
+    <script src="/assets/js/latest_articles.js?b={{buildTime}}"></script>
+    <script src="/assets/js/categories.js?b={{buildTime}}"></script>
+    <script src="/assets/js/codeblock.js?b={{buildTime}}"></script>
+    <script src="/assets/js/time_course.js?b={{buildTime}}"></script>
     <link rel="canonical" href="https://blog.qmainconts.dev/articles/{{.ID}}.html">
     <meta name="description" content="{{$bodyfirst := index .Body 0}}{{trimSample $bodyfirst.Body}}">
     <meta name="google-site-verification" content="u0BTjFYkL3nKuJ0DyWuKngSx29oQe4lkzcAgTFfP2bQ" />
