add share button

--- a/template/article.html
+++ b/template/article.html
@@ -87,9 +87,9 @@
                         <script type="text/javascript" src="https://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
                     </div>
                     <!-- 共有まわりのロジックとCSSが全部消えてしまったのでなんとかする -->
-                    <!-- <div class="widget-child-wrapper">
+                    <div class="widget-child-wrapper">
                         <button id="misc-share"><img src="/assets/share.svg" width="16" height="16">共有</button>
-                    </div> -->
+                    </div>
                 </div>
             </section>
             <section class="box">
