--- a/template/assets/css/article.css
+++ b/template/assets/css/article.css
@@ -249,3 +249,13 @@ th {
     display: flex;
     align-items: center;
 }
+
+.misc-share {
+    background-color: #dfd;
+    border: 2px solid rgb(11, 177, 34);
+
+    img {
+        display: inline-block;
+        margin-right: 5px;
+    }
+}
