--- a/template/article.html
+++ b/template/article.html
@@ -101,10 +101,7 @@
         </section>
         {{- template "subcol" . -}}
     </main>
-    <footer>
-        <p>当ホームページに記載されている会社名・製品名・システム名などは、各社の登録商標、もしくは商標です。</p>
-        <p>© 2022 Kjuman Enobikto All rights reserved.</p>
-    </footer>
+    {{- template "footer" . -}}
 </body>
 
 </html>
