--- a/template/components/footer.html
+++ b/template/components/footer.html
@@ -1,4 +1,6 @@
+{{ define "footer" }}
 <footer>
     <p>当ホームページに記載されている会社名・製品名・システム名などは、各社の登録商標、もしくは商標です。</p>
     <p>© 2022 Kjuman Enobikto All rights reserved.</p>
 </footer>
+{{ end }}
