--- a/template/assets/css/common.css
+++ b/template/assets/css/common.css
@@ -86,6 +86,7 @@ button {
 @media screen and (max-width: 1100px) {
     .box {
         box-sizing: border-box;
+        padding: 20px 10px;
     }
 }
 
