--- a/template/assets/css/common.css
+++ b/template/assets/css/common.css
@@ -100,7 +100,7 @@ button {
 
 @media screen and (max-width: 1100px) {
     #maincol {
-        margin: 10px 10px 5px;
+        margin: 10px 0 5px;
         width: min(100%, 700px);
     }
 }
@@ -114,7 +114,7 @@ button {
 
 @media screen and (max-width: 1100px) {
     #subcol {
-        margin: 5px 10px 10px;
+        margin: 5px 0 10px;
         width: min(100%, 700px);
     }
 }
