--- a/template/assets/css/common.css
+++ b/template/assets/css/common.css
@@ -44,7 +44,8 @@ header {
 main {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    /* justify-content: center; */
+    gap: 20px;
     align-items: flex-start;
 }
 
@@ -79,7 +80,7 @@ button {
     line-height: 2;
 
     &:not(:first-child) {
-        margin-top: 10px;
+        margin-top: 20px;
     }
 }
 
@@ -89,12 +90,16 @@ button {
     }
 }
 
-/* @media screen and (max-width: ) */
+#maincol, #subcol {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin: 20px 0;
+}
 
 /* メイン部分 */
 
 #maincol {
-    margin: 20px 10px;
     width: min(max(calc(100vw - 1000px), 700px), 1000px);
 }
 
@@ -108,7 +113,6 @@ button {
 /* ウィジェット部分 */
 
 #subcol {
-    margin: 20px 10px;
     width: 360px;
 }
 
