--- a/template/assets/css/common.css
+++ b/template/assets/css/common.css
@@ -1,5 +1,6 @@
 :root {
     --toggle-display-width: 1100px;
+    --main-width: 700px;
 }
 
 body {
@@ -44,8 +45,9 @@ header {
 main {
     display: flex;
     flex-wrap: wrap;
-    /* justify-content: center; */
+    justify-content: center;
     gap: 20px;
+    padding: 20px 0;
     align-items: flex-start;
 }
 
@@ -78,15 +80,17 @@ button {
     padding: 20px;
     border-radius: 20px;
     line-height: 2;
+}
 
-    &:not(:first-child) {
-        margin-top: 20px;
+@media screen and (max-width: var(--toggle-display-width)) {
+    .box {
+        box-sizing: border-box;
     }
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: var(--main-width)) {
     .box {
-        box-sizing: border-box;
+        border-radius: 0;
     }
 }
 
@@ -94,32 +98,25 @@ button {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    margin: 20px 0;
 }
-
-/* メイン部分 */
 
 #maincol {
-    width: min(max(calc(100vw - 1000px), 700px), 1000px);
+    width: min(max(calc(100vw - 1000px), var(--main-width)), 1000px);
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: var(--toggle-display-width)) {
     #maincol {
-        margin: 10px 0 5px;
-        width: min(100%, 700px);
+        width: min(100%, var(--main-width));
     }
 }
-
-/* ウィジェット部分 */
 
 #subcol {
     width: 360px;
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: var(--toggle-display-width)) {
     #subcol {
-        margin: 5px 0 10px;
-        width: min(100%, 700px);
+        width: min(100%, var(--main-width));
     }
 }
 
