--- a/template/assets/css/common.css
+++ b/template/assets/css/common.css
@@ -82,13 +82,13 @@ button {
     line-height: 2;
 }
 
-@media screen and (max-width: var(--toggle-display-width)) {
+@media screen and (max-width: 1100px) {
     .box {
         box-sizing: border-box;
     }
 }
 
-@media screen and (max-width: var(--main-width)) {
+@media screen and (max-width: 700px) {
     .box {
         border-radius: 0;
     }
@@ -104,7 +104,7 @@ button {
     width: min(max(calc(100vw - 1000px), var(--main-width)), 1000px);
 }
 
-@media screen and (max-width: var(--toggle-display-width)) {
+@media screen and (max-width: 1100px) {
     #maincol {
         width: min(100%, var(--main-width));
     }
@@ -114,7 +114,7 @@ button {
     width: 360px;
 }
 
-@media screen and (max-width: var(--toggle-display-width)) {
+@media screen and (max-width: 1100px) {
     #subcol {
         width: min(100%, var(--main-width));
     }
