--- a/template/article.html
+++ b/template/article.html
@@ -39,6 +39,7 @@
     <script src="/assets/js/categories.js?b={{buildTime}}"></script>
     <script src="/assets/js/codeblock.js?b={{buildTime}}"></script>
     <script src="/assets/js/time_course.js?b={{buildTime}}"></script>
+    <script src="/assets/js/toc.js?b={{buildTime}}"></script>
     <link rel="canonical" href="https://blog.qmainconts.dev/articles/{{.ID}}.html">
     <meta name="description" content="{{$bodyfirst := index .Body 0}}{{trimSample $bodyfirst.Body}}">
     <meta name="google-site-verification" content="u0BTjFYkL3nKuJ0DyWuKngSx29oQe4lkzcAgTFfP2bQ" />
