--- a/template/components/subcol.html
+++ b/template/components/subcol.html
@@ -28,5 +28,9 @@
             </div>
         </section>
     </div>
+    <div class="box toc">
+        <h3 class="widgetindex toc-head">Table of Contents</h3>
+        <div id="toc-wrapper"></div>
+    </div>
 </section>
 {{ end }}
