--- a/template/components/subcol.html
+++ b/template/components/subcol.html
@@ -28,9 +28,9 @@
             </div>
         </section>
     </div>
-    <div class="box toc">
-        <h3 class="widgetindex toc-head">Table of Contents</h3>
-        <div id="toc-wrapper"></div>
+    <div class="box toc-side">
+        <h3 class="widgetindex toc-side-head">Table of Contents</h3>
+        <ul id="toc-side-wrapper"></ul>
     </div>
 </section>
 {{ end }}
