--- a/template/components/subcol.html
+++ b/template/components/subcol.html
@@ -24,13 +24,12 @@
         </section>
         <section class="widgetgroup">
             <h3 class="widgetindex">Category</h3>
-            <div id="categorydisplay">
-            </div>
+            <div id="categorydisplay"></div>
         </section>
     </div>
-    <div class="box toc-side">
-        <h3 class="widgetindex toc-side-head">Table of Contents</h3>
+    <nav class="box toc-side">
+        <!-- <h3 class="widgetindex toc-side-head">Table of Contents</h3> -->
         <ul id="toc-side-wrapper"></ul>
-    </div>
+    </nav>
 </section>
 {{ end }}
