--- a/template/assets/css/article.css
+++ b/template/assets/css/article.css
@@ -339,13 +339,22 @@ th {
         font-size: 1.1rem;
         font-weight: bold;
         line-height: 1;
-        margin-bottom: 10px;
+        
+        &:before {
+            content: "▶";
+            margin-right: 5px;
+        }
+    }
+
+    &[open] .toc-atcbody-title:before {
+        content: "▼";
     }
 
     ul {
         line-height: 1.5;
         list-style-type: none;
         margin-left: 0;
+        margin-top: 10px;
 
         a {
             display: block;
