--- a/template/404.html
+++ b/template/404.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>404 Not Found | Qman's Diary</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
     <!-- Open Graph (OGP) Meta Tags -->
     <meta property="og:title" content="404 Not Found | Qman's Diary">
     <meta property="og:description" content="ページが見つかりませんでした。">
@@ -15,14 +15,14 @@
     <meta property="og:site_name" content="Qman's Diary">
     <meta property="og:image" content="https://blog.qmainconts.dev/assets/icon_large.png">
     <meta property="og:locale" content="ja_JP">
-    
+
     <!-- Twitter Cards Meta Tags -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="404 Not Found | Qman's Diary">
     <meta name="twitter:description" content="ページが見つかりませんでした。">
     <meta name="twitter:url" content="https://blog.qmainconts.dev/404.html">
     <meta name="twitter:site" content="@QmanEnobikto">
-    
+
     <!-- その他 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -70,7 +70,7 @@
                 </div>
                 <section class="widgetgroup">
                     <h3 class="widgetindex">Profile</h3>
-                    <p>オタクコンテンツで命を繋いでいる人間</p>
+                    <p>このページはないよ</p>
                 </section>
                 <section class="widgetgroup">
                     <h3 class="widgetindex">Accounts</h3>
