--- a/template/index.html
+++ b/template/index.html
@@ -75,7 +75,7 @@
                     {{- range getPagination .CurrentPage .AllPage 5 -}}
                     <a class="pn-element {{if eq . $.CurrentPage}}active{{end}}" href="{{$ctx.Root}}{{if gt . 1}}page/{{.}}{{end}}">{{.}}</a>
                     {{- end -}}
-                    {{- if not eq .CurrentPage .AllPage -}}
+                    {{- if ne .CurrentPage .AllPage -}}
                     <a class="pn-element pn-return-last" href="{{.Root}}page/{{.AllPage}}">»</a>
                     {{- end -}}
                 </div>
