--- a/resources/templates/singles/404.html
+++ b/resources/templates/singles/404.html
@@ -4,23 +4,23 @@
 <head prefix="og:http://ogp.me/ns#">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{{.Title}} - Qman's Diary</title>
+    <title>404 Not Found - Qman's Diary</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Open Graph (OGP) Meta Tags -->
-    <meta property="og:title" content="{{.Title}} - Qman's Diary">
-    <meta property="og:description" content="{{$bodyfirst := index .Body 0}}{{trimSample $bodyfirst.Body}}">
-    <meta property="og:url" content="https://blog.qmainconts.dev/articles/{{.ID}}.html">
-    <meta property="og:type" content="article">
+    <meta property="og:title" content="404 Not Found - Qman's Diary">
+    <meta property="og:description" content="ページが見つかりませんでした。">
+    <meta property="og:url" content="https://blog.qmainconts.dev/404.html">
+    <meta property="og:type" content="website">
     <meta property="og:site_name" content="Qman's Diary">
     <meta property="og:image" content="https://blog.qmainconts.dev/assets/icon_large.png">
     <meta property="og:locale" content="ja_JP">
 
     <!-- Twitter Cards Meta Tags -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="{{.Title}} - Qman's Diary">
-    <meta name="twitter:description" content="{{$bodyfirst := index .Body 0}}{{trimSample $bodyfirst.Body}}">
-    <meta name="twitter:url" content="https://blog.qmainconts.dev/articles/{{.ID}}.html">
+    <meta name="twitter:title" content="404 Not Found - Qman's Diary">
+    <meta name="twitter:description" content="ページが見つかりませんでした。">
+    <meta name="twitter:url" content="https://blog.qmainconts.dev/404.html">
     <meta name="twitter:site" content="@QmanEnobikto">
 
     <!-- その他 -->
@@ -40,8 +40,8 @@
     <script src="/assets/js/codeblock.js?b={{buildTime}}"></script>
     <script src="/assets/js/time_course.js?b={{buildTime}}"></script>
     <script src="/assets/js/toc.js?b={{buildTime}}"></script>
-    <link rel="canonical" href="https://blog.qmainconts.dev/articles/{{.ID}}.html">
-    <meta name="description" content="{{$bodyfirst := index .Body 0}}{{trimSample $bodyfirst.Body}}">
+    <link rel="canonical" href="https://blog.qmainconts.dev/404.html">
+    <meta name="description" content="ページが見つかりませんでした。">
     <meta name="google-site-verification" content="u0BTjFYkL3nKuJ0DyWuKngSx29oQe4lkzcAgTFfP2bQ" />
 </head>
 
@@ -51,46 +51,16 @@
     <main>
         <section id="maincol">
             <section class="box">
-                <div class="date">
-                    {{- formatTime .PublishedAt -}}
-                    {{- if ne (formatTime .PublishedAt) (formatTime .UpdatedAt) }} ({{formatTime .UpdatedAt}} 更新)
-                    {{- end -}}</div>
-                <h1 id="articletitle">{{- .Title -}}</h1>
+                <div class="date">2404-04-04</div>
+                <h1 id="articletitle">404 Not Found</h1>
                 <div class="tags">
                     <div class="tag"><img src="/assets/tag.svg" alt="タグ" width="18" height="18" draggable="false"></div>
-                    {{- range .Category -}}
-                    <div class="tag"><a href="category/{{.ID}}"></a>
-                        {{- .Name -}}
-                    </div>
-                    {{- end -}}
+                    <div class="tag"><a href="#"></a>エラー</div>
+                    <div class="tag"><a href="#"></a>404</div>
                 </div>
-                {{- if .Event.EventText -}}
-                <a href="{{.Event.EventLink}}" target="_blank" class="event-banner-link-wrapper">
-                    <div class="event-banner">
-                        <img src="/assets/event.svg" alt="イベント" width="20" height="20" draggable="false">
-                        <p>{{- .Event.EventText -}}</p>
-                    </div>
-                </a>
-                {{- end -}}
-                <div id="time-course-warning"></div>
                 <article id="atcbody">
-                    {{- range $bodies := .Body -}}
-                    {{- replaceWebp $bodies.Body -}}
-                    {{- end -}}
+                    お探しのページは見つかりませんでした。
                 </article>
-                <div class="widget-wrapper">
-                    <div class="widget-child-wrapper">
-                        <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-lang="ja" data-show-count="false">Post</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                    </div>
-                    <div class="widget-child-wrapper">
-                        <a href="https://b.hatena.ne.jp/entry/" class="hatena-bookmark-button" data-hatena-bookmark-layout="touch-counter" title="このエントリーをはてなブックマークに追加"><img src="https://b.st-hatena.com/images/v4/public/entry-button/button-only@2x.png" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a>
-                        <script type="text/javascript" src="https://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
-                    </div>
-                    <!-- <div class="widget-child-wrapper">
-                        <button id="misc-share"><img src="/assets/share.svg" width="16" height="16"></button>
-                    </div> -->
-                </div>
             </section>
             <section class="box">
                 <section class="widgetgroup" id="recent">
