--- a/resources/templates/singles/404.html
+++ b/resources/templates/singles/404.html
@@ -57,6 +57,7 @@
                     <div class="tag"><img src="/assets/tag.svg" alt="タグ" width="18" height="18" draggable="false"></div>
                     <div class="tag"><a href="#"></a>エラー</div>
                     <div class="tag"><a href="#"></a>404</div>
+                    <div class="tag"><a href="#"></a>Not Found</div>
                 </div>
                 <article id="atcbody">
                     お探しのページは見つかりませんでした。
